# lc-agent

./: .gitignore  AGENTS.md  README.md  alembic.ini  config.example.jsonc  config.jsonc  lc_agent_checkpoints.db-shm  lc_agent_checkpoints.db-wal  lc_agent_data.db  package-lock.json  pub_pypi_lc_agent.py  pyproject.toml
.serena/: project.yml
.superpowers/brainstorm/: sidebar-agent-session-options.html
frontend/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: check-chat-connection-contract.mjs  check-chat-edit-contract.mjs  check-chat-http-data-contract.mjs  check-chat-http-ui-contract.mjs  check-chat-identity-thinking-contract.mjs  check-chat-width-contract.mjs  check-client-id-contract.mjs  check-favicon-contract.mjs  check-markdown-theme.mjs  check-responsive-layout.mjs  check-restart-bfzs-contract.mjs  check-session-pinning-contract.mjs  check-session-route-restore-contract.mjs  check-sidebar-agent-cards.mjs  check-token-usage-panel-contract.mjs
frontend/src/: App.vue  main.ts  style.css
lc_agent/: __init__.py  __main__.py  app.py  desktop.py  main.py
lc_agent/config/: __init__.py  loader.py  schema.py
lc_agent/core/: __init__.py  chat_model.py  engine.py  http_trace.py  http_trace_httpx.py  models.py
lc_agent/db/: __init__.py  engine.py  models.py  repository.py
lc_agent/mcp/: __init__.py  manager.py  tool_adapter.py
lc_agent/server/: __init__.py  app.py  dependencies.py  websocket.py
lc_agent/skills/: __init__.py  filtered_loader.py  scanner.py
lc_agent/tools/: __init__.py  builtin.py  registry.py
lc_agent/utils/: loggers.py
tests/: conftest.py  test_app.py  test_config.py  test_custom_agents.py  test_db.py  test_engine.py  test_hitl.py  test_integration.py  test_mcp.py  test_mcp_adapter.py  test_routes_agents.py  test_routes_models.py  test_routes_sessions.py  test_routes_tools.py  test_runtime.py  test_server.py  test_skills.py  test_tools.py  test_ws_events.py
testsmy/: missing-files-report.md
testsmy/modelthinktest/: README.md  run_all.ps1  (+9 more)
(+75 files in other folders)
