[project]
name = "lc-agent-app"
version = "0.2.3"
description = "LangChain Agent framework with built-in Web UI"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "langchain>=1.0",
    "langgraph>=0.4",
    "langchain-openai",
    "langchain-deepseek",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "langgraph-checkpoint-sqlite>=3.0",
    "python-dotenv",
    "commentjson",
    "websockets",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "langchain-agentskills>=0.4",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
    "ruff",
]
desktop = [
    "pywebview>=5.0",
]

[project.scripts]
lc-agent = "lc_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lc_agent"]

[tool.hatch.build.targets.sdist]
include = ["lc_agent/**", "README.md", "pyproject.toml", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
